--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/js/mdb.min.js"></script>
+    <!-- Bowser -->
+    <script type="text/javascript" src="js/bowser.js"></script>
     <!-- Audio Player -->
     <script type="text/javascript" src="js/AetherPlayer_bootstrap.js"></script>
     <!-- Custom JavaScript -->
