Changed the color of the visualizer, added social media preview and changed intro background

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <!-- Social media preview -->
+    <meta property="og:site_name" content="Online Curriculum"/>
+    <meta property="og:title" content="Hi! Welcome to my online CV."/>
+    <meta property="og:description" content="Because LinkedIn it's to mainstream and more serious. Here you have a quick summary and also music."/>
+    <meta property="og:url" content="http://thetechnicallyweakguy.com">
+    <meta property="og:type" content="website"/>
+    <!-- Social media preview -->
+
     <title>Online Curriculum</title>
     <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
 
