--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:site_name" content="Online Curriculum"/>
     <meta property="og:title" content="Hi! Welcome to my online CV."/>
     <meta property="og:description" content="Because LinkedIn it's to mainstream and more serious. Here you have a quick summary and also music."/>
+    <meta property="og:image" content="https://c1.staticflickr.com/5/4654/25254688767_59603ff06c_o.jpg">
     <meta property="og:url" content="http://thetechnicallyweakguy.com">
     <meta property="og:type" content="website"/>
     <!-- Social media preview -->
