Added details to bottom explanation

--- a/index.html
+++ b/index.html
@@ -546,7 +546,8 @@
                     curve it's bigger and they are heavier than a simple <strong>HTML5</strong> + <strong>CSS3/Bootstrap</strong>
                     + <strong>JavaScript</strong> site. Also, I wanted to play a bit with the <strong>Youtube API</strong>
                     (although at the end I did not include it because of the overlapping problems with the content on mobile and
-                    tablet devices), <strong>Google Maps API</strong> and the <strong>AWS Management Console</strong>.
+                    tablet devices), <strong>Google Maps API</strong>, the <strong> Open Graph protocol </strong> by <strong> Facebook </strong>
+                    and the <strong>AWS Management Console</strong>.
                 </p>
 
                 <p>
