--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Social media preview -->
     <meta property="og:site_name" content="Online Curriculum"/>
     <meta property="og:title" content="Hi! Welcome to my online CV."/>
-    <meta property="og:description" content="Because LinkedIn it's to mainstream and more serious. Here you have a quick summary and also music."/>
+    <meta property="og:description" content="Because LinkedIn it's too mainstream and more serious. Here you have a quick summary and also music."/>
     <meta property="og:image" content="http://thetechnicallyweakguy.com/img/PipBoy.jpg">
     <meta property="og:url" content="http://thetechnicallyweakguy.com">
     <meta property="og:type" content="website"/>
@@ -126,7 +126,7 @@
 
                             <!-- Description -->
                             <h4 class="white-text my-4">
-                                <p> Because LinkedIn it's to mainstream and more serious. </p>
+                                <p> Because LinkedIn it's too mainstream and more serious. </p>
                                 <p>
                                     <i class="fa fa-music red-text"></i>
                                         Here you have a quick summary and also music
