--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Social media preview -->
     <meta property="og:site_name" content="Online Curriculum"/>
     <meta property="og:title" content="Hi! Welcome to my online CV."/>
-    <meta property="og:description" content="Because LinkedIn it's too mainstream and more serious. Here you have a quick summary and also music."/>
+    <meta property="og:description" content="Because LinkedIn it's to mainstream and more serious. Here you have a quick summary and also music."/>
     <meta property="og:image" content="http://thetechnicallyweakguy.com/img/PipBoy.jpg">
     <meta property="og:url" content="http://thetechnicallyweakguy.com">
     <meta property="og:type" content="website"/>
@@ -20,22 +20,22 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.4/css/mdb.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.13/css/mdb.min.css" rel="stylesheet">
     <!-- Audio Player -->
     <link rel="stylesheet" href="css/AetherPlayer.css">
     <!-- Custom styles -->
     <link rel="stylesheet" href="css/style.css">
 
     <!-- JQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.4/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.13/js/mdb.min.js"></script>
     <!-- Bowser -->
     <script type="text/javascript" src="js/bowser.js"></script>
     <!-- Audio Player -->
@@ -126,7 +126,7 @@
 
                             <!-- Description -->
                             <h4 class="white-text my-4">
-                                <p> Because LinkedIn it's too mainstream and more serious. </p>
+                                <p> Because LinkedIn it's to mainstream and more serious. </p>
                                 <p>
                                     <i class="fa fa-music red-text"></i>
                                         Here you have a quick summary and also music
