Added 'References' section with the recommended letters1

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                             <a class="nav-link" href="#scientificPublications">Publications</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#references">References</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#events">Events</a>
                         </li>
                         <li class="nav-item">
@@ -392,6 +395,85 @@
 
             </section>
             <!--Section: Scientific publications -->
+
+            <hr class="my-5">
+            
+            <!--Section: References-->
+            <section id="references" class="text-center">
+
+                <!-- Heading -->
+                <h2 class="mb-5 font-weight-bold">References</h2>
+
+                <!--Grid row-->
+                <div class="row d-flex justify-content-center mb-4">
+
+                    <!--Grid column-->
+                    <div class="col-md-8">
+
+                        <!-- Description -->
+                        <p class="blue-grey-text">Here you can find all the recommendation letters that I've until the date from my previous job positions.</p>
+
+                    </div>
+                    <!--Grid column-->
+
+                </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-12 mb-4">
+
+                        <a href="pdf/letter-carlos.pdf" target="_blank">
+                            <i class="fa fa-envelope-o fa-5x orange-text"></i>
+                        </a>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="http://pdi.udc.es/en/File/Pdi/ZU9BH" target="_blank">
+                                PhD Carlos Gómez Rodríguez
+                            </a>
+                        </h4>
+
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-6 mb-4">
+
+                        <a href="pdf/letter-david.pdf" target="_blank">
+                            <i class="fa fa-envelope-o fa-5x orange-text"></i>
+                        </a>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="http://www.grupolys.org/~david.vilares/" target="_blank">
+                                <strong>PhD David Vilares Calvo</strong>
+                            </a>
+                        </h4>
+
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-6 mb-4">
+
+                        <a href="pdf/letter-luaces.pdf" target="_blank">
+                            <i class="fa fa-envelope-o fa-5x orange-text"></i>
+                        </a>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="http://pdi.udc.es/en/File/Pdi/6U69E" target="_blank">
+                                PhD Miguel Ángel Rodríguez Luaces
+                            </a>
+                        </h4>
+
+                    </div>
+                    <!--Grid column-->
+
+                </div>
+                <!--Grid row-->
+            </section>
+            <!--Section: References-->
 
             <hr class="my-5">
             
