Fixed the alignment display of used tools on 'Collaborations' section.

--- a/index.html
+++ b/index.html
@@ -601,28 +601,42 @@
                             <h6 class="pb-1"><i class="fa fa-paint-brush"></i><strong> A brief summary of what I do on them. </strong></h6>
                         </a>
                         <h4 class="mb-3"><strong>Expanding the projects to reach more people</strong></h4>
-                        <p class="blue-grey-text">I'm one of the main translators that helped to translate these projects to Spanish and Galician.
+                        <p class="blue-grey-text text-justify">I'm one of the main translators that helped to translate these projects to Spanish and Galician.
                             On each project I've used different tools that allows to translate easy and quickly from one
                             idiom to other and be able to communicate with other translator during the process.</p>
 
                         <p class="blue-grey-text">Here there is the list of the tools that I've used to translate on those sites:</p>
 
-                        <dl class="dl-horizontal">
+                        <!--Grid row-->
+                        <div class="row">
 
-                            <dt>Adblock Plus <a href="https://adblockplus.org" target="_blank"> <span>(Site)</span> </a> </dt>
-                            <dd><a href="https://crowdin.com/" target="_blank"> <span>Crowdin</span> </a></dd>
+                            <!--Grid column-->
+                            <div class="col-md-4">
+                                <dt>Adblock Plus <a href="https://adblockplus.org" target="_blank"> <span>(Site)</span> </a> </dt>
+                                <dd><a href="https://crowdin.com/" target="_blank"> <span>Crowdin</span> </a></dd>
+                            </div>
+                            <!--Grid column-->
 
-                            <dt>Episode Calendar <a href="https://episodecalendar.com" target="_blank"> <span>(Site)</span> </a> </dt>
-                            <dd><a href="https://www.transifex.com/" target="_blank"> <span>Transifex</span> </a> </dd>
-                            <dd><a href="https://weblate.org" target="_blank"> <span>Weblate</span> </a> </dd>
+                            <!--Grid column-->
+                            <div class="col-md-4">
+                                <dt>Episode Calendar <a href="https://episodecalendar.com" target="_blank"> <span>(Site)</span> </a> </dt>
+                                <dd><a href="https://www.transifex.com/" target="_blank"> <span>Transifex</span> </a> </dd>
+                                <dd><a href="https://weblate.org" target="_blank"> <span>Weblate</span> </a> </dd>
+                            </div>
+                            <!--Grid column-->
 
-                            <dt>Popcorn Time <a href="https://popcorntime.sh" target="_blank"> <span>(Site)</span> </a> </dt>
-                            <dd><a href="https://www.transifex.com/" target="_blank"> <span>Transifex</span> </a> </dd>
+                            <!--Grid column-->
+                            <div class="col-md-4">
+                                <dt>Popcorn Time <a href="https://popcorntime.sh" target="_blank"> <span>(Site)</span> </a> </dt>
+                                <dd><a href="https://www.transifex.com/" target="_blank"> <span>Transifex</span> </a> </dd>
+                            </div>
+                            <!--Grid column-->
 
-                        </dl>
+                        </div>
+                        <!--Grid row-->
+                        
                     </div>
                     <!--Grid column-->
-
                 </div>
                 <!--Grid row-->
 
