--- a/index.html
+++ b/index.html
@@ -311,22 +311,6 @@
                     </div>
                     <!--Grid column-->
 
-                    <!--Grid column-->
-                    <div class="col-lg-4 col-md-12 mb-4">
-
-                        <div class="view zoom z-depth-1-half">
-                            <img src="img/searchJob.jpg" class="img-fluid m-auto" alt="">
-                            <a>
-                                <div class="mask waves-effect waves-light"></div>
-                            </a>
-                        </div>
-
-                        <h4 class="my-4 font-weight-bold">Unemployed</h4>
-                        <p class="blue-grey-text">At this moment. I'm looking for a job.</p>
-
-                    </div>
-                    <!--Grid column-->
-
                 </div>
                 <!--Grid row-->
             </section>
@@ -494,7 +478,6 @@
 
                     </div>
                     <!--Grid column-->
-
                 </div>
                 <!--Grid row-->
 
@@ -502,36 +485,210 @@
                 <div class="row">
 
                     <!--Grid column-->
-                    <div class="col-lg-4 col-md-12 mb-4">
+                    <div class="col-md-6 mb-4">
 
-                    </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
-                    <div class="col-lg-4 col-md-6 mb-4">
-
-                        <div class="view zoom z-depth-1-half">
-                            <img src="img/codemotion_intro.png" class="img-fluid m-auto" style="display: flex; justify-content: center;" alt="">
-                            <a href="https://madrid2018.codemotionworld.com/" target="_blank">
-                                <div class="mask waves-effect waves-light"></div>
+                        <!--Carousel Wrapper-->
+                        <div id="eventCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+                            <!--Indicators-->
+                            <ol class="carousel-indicators">
+                                <li data-target="#eventCarousel" data-slide-to="0" class="active"></li>
+                                <li data-target="#eventCarousel" data-slide-to="1"></li>
+                                <li data-target="#eventCarousel" data-slide-to="2"></li>
+                                <li data-target="#eventCarousel" data-slide-to="3"></li>
+                            </ol>
+                            <!--/.Indicators-->
+                            <!--Slides-->
+                            <div class="carousel-inner z-depth-1-half" role="listbox">
+                                <!--First slide-->
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src="img/codemotion/codemotionStart.jpg" alt="First slide">
+                                </div>
+                                <!--/First slide-->
+                                <!--Second slide-->
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="img/codemotion/botsLovers.jpg" alt="Second slide">
+                                </div>
+                                <!--/Second slide-->
+                                <!--Third slide-->
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="img/codemotion/merchandising.jpg" alt="Third slide">
+                                </div>
+                                <!--/Third slide-->
+                                <!--Fourth slide-->
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="img/codemotion/johnRomero.jpg" alt="Fourth slide">
+                                </div>
+                                <!--/Fourth slide-->
+                            </div>
+                            <!--/.Slides-->
+                            <!--Controls-->
+                            <a class="carousel-control-prev" href="#eventCarousel" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
                             </a>
+                            <a class="carousel-control-next" href="#eventCarousel" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                            <!--/.Controls-->
                         </div>
-
-                        <h4 class="my-4 font-weight-bold">Codemotion 2018</h4>
-                        <p class="blue-grey-text">I will attend to Codemotion 2018 - Madrid from 30 Nov. - 1 Dec. I will update this section with photos and a brief
-                            review about the talks and impressions about this event.</p>
+                        <!--/.Carousel Wrapper-->
 
                     </div>
                     <!--Grid column-->
 
                     <!--Grid column-->
-                    <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="col-md-6">
 
+                        <!--Excerpt-->
+                        <a href="" class="teal-text">
+                            <h6 class="pb-1"><i class="fa fa-paint-brush"></i><strong> See some photos and all the talks that I have attended. </strong></h6>
+                        </a>
+                        <h4 class="mb-3"><strong>Codemotion Madrid 2018</strong></h4>
+                        <p class="blue-grey-text text-justify">This was my first assistance to a computer science related event. I've liked the experience and met
+                        a lot of people, I got in touch about what the job market offers and wants plus I got a lot of merchandising from the companies while I
+                        was listening to their proposals. Even I could see John Romero playing DOOM! The ambience was very pleasure and I could enjoy the event
+                        without problems. I'm sure I'll repeat in the future again if I can.</p>
                     </div>
                     <!--Grid column-->
 
                 </div>
                 <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+                    <p class="blue-grey-text">Here there is the list of the talks that I've attended on the event:</p>
+                </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>Three Ghosts of Serverless - A look in the Pas, Present, and Yet to Come (Oracle)</dt>
+                        <dd>Chad Arimura</dd>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>Bots with AI will take your job unless you are a bot developer (for now...)</dt>
+                        <dd>Andres Pulgarin</dd>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>You want your apps to be safe? Hack yourself!</dt>
+                        <dd>Isabelle Mauny</dd>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>Hacking the blockchain for fun and profit</dt>
+                        <dd>Oscar Delgado</dd>
+                    </div>
+                    <!--Grid column-->
+                </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>VR-infographic integrating VR and AR in daily newsroom production workflow</dt>
+                        <dd>Javier Lasa</dd>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>ECMAScript 2018 y más allá</dt>
+                        <dd>Pablo Magaz</dd>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>Drones como amenaza a infraestructuras críticas. El "Proyecto Interceptor"</dt>
+                        <dd>David Melendez</dd>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>IoT and Blockchain frontier even further</dt>
+                        <dd>Martín Coedo Mestre</dd>
+                    </div>
+                    <!--Grid column-->
+                </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>Speak up! Reshaping the future of technology using the voice (Amazon Alexa)</dt>
+                        <dd>German Viscuso</dd>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>The Early Days of Id Software: Programming Principles</dt>
+                        <dd>John Romero</dd>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>Microservicios reactivos con Micronaut</dt>
+                        <dd>Iván López</dd>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>Bug Bounty Program, does it help?</dt>
+                        <dd>Omar Benbouazza</dd>
+                    </div>
+                    <!--Grid column-->
+                </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>Pwned City: Ciudad sin Ley</dt>
+                        <dd>Martina Matarí</dd>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>Ultimate Stack Compilation - Elegimos las herramientas y al final sale bien</dt>
+                        <dd>Catalina Oyaneder</dd>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>Desarrolla tu aplicación Android con Kotlin y VIPER!</dt>
+                        <dd>Alexander Cabezas</dd>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3">
+                        <dt>Can't you stop looking at you phone?</dt>
+                        <dd>Marta Peirano</dd>
+                    </div>
+                    <!--Grid column-->
+                </div>
+                <!--Grid row-->
+
             </section>
             <!--Section: Events-->
             
