--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                 <div class="row">
                     <!--Grid column-->
                     <div class="col-md-3">
-                        <dt>Three Ghosts of Serverless - A look in the Pas, Present, and Yet to Come (Oracle)</dt>
+                        <dt>Three Ghosts of Serverless - A look in the Past, Present, and Yet to Come (Oracle)</dt>
                         <dd>Chad Arimura</dd>
                     </div>
                     <!--Grid column-->
