Updated work experience and added the logo

--- a/index.html
+++ b/index.html
@@ -310,6 +310,23 @@
 
                     </div>
                     <!--Grid column-->
+                    
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-12 mb-4">
+
+                        <div class="view zoom z-depth-1-half">
+                            <img src="img/sia-logo.png" class="img-fluid" alt="">
+                            <a href="http://www.sia.es/" target="_blank">
+                                <div class="mask waves-effect waves-light"></div>
+                            </a>
+                        </div>
+
+                        <h4 class="my-4 font-weight-bold">Technical security consultant in software development</h4>
+                        <p class="blue-grey-text">Audit of code to detect possible security problems, generating the respective report to notify
+                            the client of the problems detected and to carry out the proposed recommended actions.</p>
+
+                    </div>
+                    <!--Grid column-->
 
                 </div>
                 <!--Grid row-->
