Added video in Event's section

--- a/index.html
+++ b/index.html
@@ -705,6 +705,25 @@
                     <!--Grid column-->
                 </div>
                 <!--Grid row-->
+                
+                <!--Grid row-->
+                <div class="row">
+                    <p class="blue-grey-text">Also, I appear in the official closing video! Can you find me? (Hint: BBVA stand)</p>
+                </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-md-12">
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WBw8OcIYQMg" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                            Sorry, your browser does not support inline frames.
+                        </iframe>
+                    </div>
+                    <!--Grid column-->
+                </div>
+                <!--Grid row-->
 
             </section>
             <!--Section: Events-->
