Fix display bug of carousel over the spectrum, updated MDB to 4.7.3 and addded "Certifications" section.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.1/css/mdb.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.3/css/mdb.min.css" rel="stylesheet">
     <!-- Audio Player -->
     <link rel="stylesheet" href="css/AetherPlayer.css">
     <!-- Custom styles -->
@@ -35,7 +35,7 @@
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.1/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.3/js/mdb.min.js"></script>
     <!-- Bowser -->
     <script type="text/javascript" src="js/bowser.js"></script>
     <!-- Audio Player -->
@@ -81,6 +81,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#references">References</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#certifications">Certifications</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#events">Events</a>
@@ -475,6 +478,65 @@
                 <!--Grid row-->
             </section>
             <!--Section: References-->
+
+            <hr class="my-5">
+
+            <!--Section: Certifications-->
+            <section id="certifications" class="text-center">
+
+                <!-- Heading -->
+                <h2 class="mb-5 font-weight-bold">Certifications</h2>
+
+                <!--Grid row-->
+                <div class="row d-flex justify-content-center mb-4">
+
+                    <!--Grid column-->
+                    <div class="col-md-8">
+
+                        <!-- Description -->
+                        <p class="blue-grey-text">Here you can find all the certifications that I've earned across my professional life.</p>
+
+                    </div>
+                    <!--Grid column-->
+
+                </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-12 mb-4">
+
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-6 mb-4">
+
+                        <a href="pdf/HCAHW-Certificate.pdf" target="_blank">
+                            <i class="fas fa-certificate fa-5x orange-text"></i>
+                        </a>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://thesecuritysentinel.es/curso/curso-auditoria-hacking-web/" target="_blank">
+                                <strong>Audit and web hacking course</strong>
+                            </a>
+                        </h4>
+
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-6 mb-4">
+
+                    </div>
+                    <!--Grid column-->
+
+                </div>
+                <!--Grid row-->
+            </section>
+            <!--Section: Certifications-->
 
             <hr class="my-5">
             
