--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <!-- Social Icon  -->
                     <ul class="navbar-nav nav-flex-icons">
                         <li class="nav-item">
-                            <a class="nav-link" href="pdf/CV.pdf" target="_blank">
+                            <a class="nav-link" href="pdf/cv/CV.pdf" target="_blank">
                                 <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
                             </a>
                         </li>
@@ -429,7 +429,7 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-12 mb-4">
 
-                        <a href="pdf/letter-carlos.pdf" target="_blank">
+                        <a href="pdf/letters/letter-carlos.pdf" target="_blank">
                             <i class="fa fa-envelope-o fa-5x orange-text"></i>
                         </a>
 
@@ -445,7 +445,7 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
 
-                        <a href="pdf/letter-david.pdf" target="_blank">
+                        <a href="pdf/letters/letter-david.pdf" target="_blank">
                             <i class="fa fa-envelope-o fa-5x orange-text"></i>
                         </a>
 
@@ -461,7 +461,7 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
 
-                        <a href="pdf/letter-luaces.pdf" target="_blank">
+                        <a href="pdf/letters/letter-luaces.pdf" target="_blank">
                             <i class="fa fa-envelope-o fa-5x orange-text"></i>
                         </a>
 
@@ -506,15 +506,25 @@
                 <div class="row">
 
                     <!--Grid column-->
-                    <div class="col-lg-4 col-md-12 mb-4">
+                    <div class="col-lg-6 col-md-6 mb-6">
+
+                        <a href="pdf/certificates/MiriadaX-HCFO.pdf" target="_blank">
+                            <i class="fas fa-certificate fa-5x orange-text"></i>
+                        </a>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://miriadax.net/home" target="_blank">
+                                <strong>Development in HTML5, CSS and Javascript of WebApps, including FirefoxOS* phones</strong>
+                            </a>
+                        </h4>
 
                     </div>
                     <!--Grid column-->
 
                     <!--Grid column-->
-                    <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="col-lg-6 col-md-6 mb-6">
 
-                        <a href="pdf/HCAHW-Certificate.pdf" target="_blank">
+                        <a href="pdf/certificates/HCAHW-Certificate.pdf" target="_blank">
                             <i class="fas fa-certificate fa-5x orange-text"></i>
                         </a>
 
@@ -523,12 +533,6 @@
                                 <strong>Audit and web hacking course</strong>
                             </a>
                         </h4>
-
-                    </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
-                    <div class="col-lg-4 col-md-6 mb-4">
 
                     </div>
                     <!--Grid column-->
