Add Scrum certificate and reorganized the image folder. Added the pdf structure skeleton

--- a/index.html
+++ b/index.html
@@ -189,7 +189,11 @@
                     <!--Grid column-->
                     <div class="col-md-4 mb-5">
                         <i class="fa fa-graduation-cap fa-4x orange-text"></i>
-                        <h4 class="my-4 font-weight-bold">Degree in Computer Science</h4>
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://www.fic.udc.es/es/plan-de-estudios" target="_blank">
+                                Degree in Computer Science
+                            </a>
+                        </h4>
                         <p class="blue-grey-text">Mention in Software development.</p>
                     </div>
                     <!--Grid column-->
@@ -197,7 +201,11 @@
                     <!--Grid column-->
                     <div class="col-md-4 mb-1">
                         <i class="fa fa-graduation-cap fa-4x orange-text"></i>
-                        <h4 class="my-4 font-weight-bold">Master Degree in Computer Science</h4>
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://www.fic.udc.es/es/muei" target="_blank">
+                                Master Degree in Computer Science
+                            </a>
+                        </h4>
                         <p class="blue-grey-text">To be able to acquire more knowledge and competences.</p>
                     </div>
                     <!--Grid column-->
@@ -205,7 +213,11 @@
                     <!--Grid column-->
                     <div class="col-md-4 mb-1">
                         <i class="fa fa-music fa-4x orange-text"></i>
-                        <h4 class="my-4 font-weight-bold">Elementary Degree of Music</h4>
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="http://www.aguarda.es/servizos-municipais/educacion/conservatorio/" target="_blank">
+                                Elementary Degree of Music
+                            </a>
+                        </h4>
                         <p class="blue-grey-text">The first 4 years of the music career, I'm specialized on piano.</p>
                     </div>
                     <!--Grid column-->
@@ -246,7 +258,7 @@
                     <div class="col-lg-4 col-md-12 mb-4">
 
                         <div class="view zoom z-depth-1-half">
-                            <img src="img/indra-logo.jpg" class="img-fluid" alt="">
+                            <img src="img/jobs/indra-logo.jpg" class="img-fluid" alt="">
                             <a href="https://www.indracompany.com/en" target="_blank">
                                 <div class="mask waves-effect waves-light"></div>
                             </a>
@@ -262,7 +274,7 @@
                     <div class="col-lg-4 col-md-6 mb-4">
 
                         <div class="view zoom z-depth-1-half">
-                            <img src="img/lys-logo.png" class="img-fluid" alt="">
+                            <img src="img/jobs/lys-logo.png" class="img-fluid" alt="">
                             <a href="http://www.grupolys.org/lys_en.html" target="_blank">
                                 <div class="mask waves-effect waves-light"></div>
                             </a>
@@ -279,7 +291,7 @@
                     <div class="col-lg-4 col-md-6 mb-4">
 
                         <div class="view zoom z-depth-1-half">
-                            <img src="img/oesia-logo.jpg" class="img-fluid" alt="">
+                            <img src="img/jobs/oesia-logo.jpg" class="img-fluid" alt="">
                             <a href="http://grupooesia.com/" target="_blank">
                                 <div class="mask waves-effect waves-light"></div>
                             </a>
@@ -302,7 +314,7 @@
                     <div class="col-lg-4 col-md-12 mb-4">
 
                         <div class="view zoom z-depth-1-half">
-                            <img src="img/enxenio-logo.png" class="img-fluid" alt="">
+                            <img src="img/jobs/enxenio-logo.png" class="img-fluid" alt="">
                             <a href="https://www.enxenio.es/" target="_blank">
                                 <div class="mask waves-effect waves-light"></div>
                             </a>
@@ -318,7 +330,7 @@
                     <div class="col-lg-4 col-md-12 mb-4">
 
                         <div class="view zoom z-depth-1-half">
-                            <img src="img/sia-logo.png" class="img-fluid" alt="">
+                            <img src="img/jobs/sia-logo.png" class="img-fluid" alt="">
                             <a href="http://www.sia.es/" target="_blank">
                                 <div class="mask waves-effect waves-light"></div>
                             </a>
@@ -506,7 +518,7 @@
                 <div class="row">
 
                     <!--Grid column-->
-                    <div class="col-lg-6 col-md-6 mb-6">
+                    <div class="col-lg-4 col-md-4 mb-4">
 
                         <a href="pdf/certificates/MiriadaX-HCFO.pdf" target="_blank">
                             <i class="fas fa-certificate fa-5x orange-text"></i>
@@ -522,7 +534,7 @@
                     <!--Grid column-->
 
                     <!--Grid column-->
-                    <div class="col-lg-6 col-md-6 mb-6">
+                    <div class="col-lg-4 col-md-4 mb-4">
 
                         <a href="pdf/certificates/HCAHW-Certificate.pdf" target="_blank">
                             <i class="fas fa-certificate fa-5x orange-text"></i>
@@ -531,6 +543,22 @@
                         <h4 class="my-4 font-weight-bold">
                             <a href="https://thesecuritysentinel.es/curso/curso-auditoria-hacking-web/" target="_blank">
                                 <strong>Audit and web hacking course</strong>
+                            </a>
+                        </h4>
+
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-4 mb-4">
+
+                        <a href="pdf/certificates/SCRUMstudy-Certificate.pdf" target="_blank">
+                            <i class="fas fa-certificate fa-5x orange-text"></i>
+                        </a>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://www.scrumstudy.com/certification/scrum-fundamentals-certified" target="_blank">
+                                <strong>Scrum Fundamentals Certified</strong>
                             </a>
                         </h4>
 
@@ -821,17 +849,17 @@
                             <div class="carousel-inner z-depth-1-half" role="listbox">
                                 <!--First slide-->
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="img/abp-logo.jpg" alt="First slide">
+                                    <img class="d-block w-100" src="img/collaborations/abp-logo.jpg" alt="First slide">
                                 </div>
                                 <!--/First slide-->
                                 <!--Second slide-->
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="img/ep-logo.jpg" alt="Second slide">
+                                    <img class="d-block w-100" src="img/collaborations/ep-logo.jpg" alt="Second slide">
                                 </div>
                                 <!--/Second slide-->
                                 <!--Third slide-->
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="img/pct-logo.png" alt="Third slide">
+                                    <img class="d-block w-100" src="img/collaborations/pct-logo.png" alt="Third slide">
                                 </div>
                                 <!--/Third slide-->
                             </div>
