--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
     <!-- Bootstrap core CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.3/css/mdb.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.4/css/mdb.min.css" rel="stylesheet">
     <!-- Audio Player -->
     <link rel="stylesheet" href="css/AetherPlayer.css">
     <!-- Custom styles -->
@@ -33,9 +33,9 @@
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.3/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.4/js/mdb.min.js"></script>
     <!-- Bowser -->
     <script type="text/javascript" src="js/bowser.js"></script>
     <!-- Audio Player -->
@@ -101,17 +101,17 @@
                     <ul class="navbar-nav nav-flex-icons">
                         <li class="nav-item">
                             <a class="nav-link" href="pdf/cv/CV.pdf" target="_blank">
-                                <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+                                <i class="far fa-file-pdf" aria-hidden="true"></i>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://github.com/MinionAttack" target="_blank">
-                                <i class="fa fa-github" aria-hidden="true"></i>
+                                <i class="fab fa-github" aria-hidden="true"></i>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://www.linkedin.com/in/iago-alonso-alonso-9ab854110" target="_blank">
-                                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                <i class="fab fa-linkedin" aria-hidden="true"></i>
                             </a>
                         </li>
                     </ul>
@@ -129,24 +129,20 @@
                 <div class="container-fluid d-flex align-items-center justify-content-center h-100">
                     <div class="row d-flex justify-content-center text-center">
                         <div class="col-md-10">
-
                             <!-- Heading -->
                             <h2 class="display-4 font-weight-bold white-text pt-5 mb-2">
-                                Hi! Welcome to my online CV <i class="fa fa-newspaper-o blue-text"></i>
+                                Hi! Welcome to my online CV <i class="far fa-newspaper blue-text"></i>
                             </h2>
-
                             <!-- Divider -->
                             <hr class="hr-light">
-
                             <!-- Description -->
-                            <h4 class="white-text my-4">
-                                <p> Because LinkedIn it's to mainstream and more serious. </p>
-                                <p>
-                                    <i class="fa fa-music red-text"></i>
+                            <h4 class="white-text my-4 intro-text">
+                                <span> Because LinkedIn it's too mainstream and more serious. </span>
+                                <span>
+                                    <i class="fas fa-music red-text"></i>
                                         Here you have a quick summary and also music
-                                    <i class="fa fa-music red-text"></i>
-                                </p>
-
+                                    <i class="fas fa-music red-text"></i>
+                                </span>
                             </h4>
                         </div>
                     </div>
@@ -188,7 +184,7 @@
 
                     <!--Grid column-->
                     <div class="col-md-4 mb-5">
-                        <i class="fa fa-graduation-cap fa-4x orange-text"></i>
+                        <i class="fas fa-graduation-cap fa-4x orange-text"></i>
                         <h4 class="my-4 font-weight-bold">
                             <a href="https://www.fic.udc.es/es/plan-de-estudios" target="_blank">
                                 Degree in Computer Science
@@ -200,7 +196,7 @@
 
                     <!--Grid column-->
                     <div class="col-md-4 mb-1">
-                        <i class="fa fa-graduation-cap fa-4x orange-text"></i>
+                        <i class="fas fa-graduation-cap fa-4x orange-text"></i>
                         <h4 class="my-4 font-weight-bold">
                             <a href="https://www.fic.udc.es/es/muei" target="_blank">
                                 Master Degree in Computer Science
@@ -212,7 +208,7 @@
 
                     <!--Grid column-->
                     <div class="col-md-4 mb-1">
-                        <i class="fa fa-music fa-4x orange-text"></i>
+                        <i class="fas fa-music fa-4x orange-text"></i>
                         <h4 class="my-4 font-weight-bold">
                             <a href="http://www.aguarda.es/servizos-municipais/educacion/conservatorio/" target="_blank">
                                 Elementary Degree of Music
@@ -376,10 +372,10 @@
 
                     <!--Grid column-->
                     <div class="col-md-12 mb-1 center">
-                        <i class="fa fa-pencil fa-4x orange-text"></i>
-                        <h4 class="my-4 font-weight-bold">
-                            <p> How Important is Syntactic Parsing Accuracy? </p>
-                            <p> An Empirical Evaluation on Rule-Based Sentiment Analysis </p>
+                        <i class="far fa-edit fa-4x orange-text pencil-paper"></i>
+                        <h4 class="my-4 font-weight-bold paper-text">
+                            <span> How Important is Syntactic Parsing Accuracy? </span>
+                            <span> An Empirical Evaluation on Rule-Based Sentiment Analysis </span>
                         </h4>
                         <p class="blue-grey-text">
                             This paper is the result of my work done as a <strong>PhD research assistant</strong> of the PhD
@@ -442,7 +438,7 @@
                     <div class="col-lg-4 col-md-12 mb-4">
 
                         <a href="pdf/letters/letter-carlos.pdf" target="_blank">
-                            <i class="fa fa-envelope-o fa-5x orange-text"></i>
+                            <i class="far fa-envelope fa-5x orange-text"></i>
                         </a>
 
                         <h4 class="my-4 font-weight-bold">
@@ -458,7 +454,7 @@
                     <div class="col-lg-4 col-md-6 mb-4">
 
                         <a href="pdf/letters/letter-david.pdf" target="_blank">
-                            <i class="fa fa-envelope-o fa-5x orange-text"></i>
+                            <i class="far fa-envelope fa-5x orange-text"></i>
                         </a>
 
                         <h4 class="my-4 font-weight-bold">
@@ -474,7 +470,7 @@
                     <div class="col-lg-4 col-md-6 mb-4">
 
                         <a href="pdf/letters/letter-luaces.pdf" target="_blank">
-                            <i class="fa fa-envelope-o fa-5x orange-text"></i>
+                            <i class="far fa-envelope fa-5x orange-text"></i>
                         </a>
 
                         <h4 class="my-4 font-weight-bold">
@@ -653,7 +649,7 @@
 
                         <!--Excerpt-->
                         <a href="" class="teal-text">
-                            <h6 class="pb-1"><i class="fa fa-paint-brush"></i><strong> See some photos and all the talks that I have attended. </strong></h6>
+                            <h6 class="pb-1"><i class="fas fa-paint-brush"></i><strong> See some photos and all the talks that I have attended. </strong></h6>
                         </a>
                         <h4 class="mb-3"><strong>Codemotion Madrid 2018</strong></h4>
                         <p class="blue-grey-text text-justify">This was my first assistance to a computer science related event. I've liked the experience and met
@@ -885,7 +881,7 @@
 
                         <!--Excerpt-->
                         <a href="" class="teal-text">
-                            <h6 class="pb-1"><i class="fa fa-paint-brush"></i><strong> A brief summary of what I do on them. </strong></h6>
+                            <h6 class="pb-1"><i class="fas fa-paint-brush"></i><strong> A brief summary of what I do on them. </strong></h6>
                         </a>
                         <h4 class="mb-3"><strong>Expanding the projects to reach more people</strong></h4>
                         <p class="blue-grey-text text-justify">I'm one of the main translators that helped to translate these projects to Spanish and Galician.
@@ -937,9 +933,9 @@
 
                 <!-- Heading -->
                 <h2 class="mb-5 font-weight-bold text-center">
-                    <i class="fa fa-map-marker"></i>
+                    <i class="fas fa-map-marker-alt"></i>
                     Where you can find me
-                    <i class="fa fa-map-marker"></i>
+                    <i class="fas fa-map-marker-alt"></i>
                 </h2>
 
                 <!--Grid row-->
@@ -949,24 +945,20 @@
                     <div class="col-lg-5 col-md-12">
                         <!-- Form contact -->
                         <form class="p-5">
-                            <div class="md-form form-sm"> <i class="fa fa-user prefix grey-text"></i>
-                                <input type="text" id="contactNameInput" class="form-control form-control-sm">
-                                <label for="contactNameInput">Your name</label>
+                            <div class="md-form form-sm"> <i class="fas fa-user prefix grey-text"></i>
+                                <input type="text" id="contactNameInput" placeholder="Your name" class="form-control form-control-sm">
                             </div>
-                            <div class="md-form form-sm"> <i class="fa fa-envelope prefix grey-text"></i>
-                                <input type="text" id="contactEmailInput" class="form-control form-control-sm">
-                                <label for="contactEmailInput">Your email</label>
+                            <div class="md-form form-sm"> <i class="fas fa-envelope prefix grey-text"></i>
+                                <input type="text" id="contactEmailInput" placeholder="Your email" class="form-control form-control-sm">
                             </div>
-                            <div class="md-form form-sm"> <i class="fa fa-tag prefix grey-text"></i>
-                                <input type="text" id="contactSubjectInput" class="form-control form-control-sm">
-                                <label for="contactSubjectInput">Subject</label>
+                            <div class="md-form form-sm"> <i class="fas fa-tag prefix grey-text"></i>
+                                <input type="text" id="contactSubjectInput" placeholder="Subject" class="form-control form-control-sm">
                             </div>
-                            <div class="md-form form-sm"> <i class="fa fa-pencil prefix grey-text"></i>
-                                <textarea type="text" id="contactMessageInput" class="md-textarea form-control form-control-sm" rows="4"></textarea>
-                                <label for="contactMessageInput">Your message</label>
+                            <div class="md-form form-sm"> <i class="fas fa-pencil-alt prefix grey-text"></i>
+                                <textarea id="contactMessageInput" placeholder="Your message" class="md-textarea custom-textarea form-control form-control-sm" rows="4"></textarea>
                             </div>
                             <div class="text-center mt-4">
-                                <button class="btn btn-primary" onclick="sendMail(); return false">Send<i class="fa fa-paper-plane-o ml-1"></i></button>
+                                <button class="btn btn-primary" onclick="sendMail(); return false">Send<i class="fas fa-paper-plane ml-1"></i></button>
                             </div>
                         </form>
                         <!-- Form contact -->
